fixed alignment after Liviu's mess

--- a/style.css
+++ b/style.css
@@ -349,6 +349,6 @@ span{
     border-bottom: solid;
 }
 
-.deleteButton{
+.deleteButtonDiv {
     margin-left: 70%;
 }
